tests/baselines/reference/ES5For-ofTypeCheck9.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck9.ts(2,15): error TS2544: Type 'number | symbol | string[]' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck9.ts (1 errors) ====
    var union: string | string[] | number | symbol;
    for (let v of union) { }
                  ~~~~~
!!! error TS2544: Type 'number | symbol | string[]' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.